Added get endpoint for accounting
